# Metac-AIbot

./: .env.template  Main.py  pyproject.toml
.github/workflows/: Pre-Mortem_Analysis_Bot.yaml
